fix: replace .toList() with   .collect(Collectors.toList()) for Java 11 compatibility
  - Fixed compilation errors in integration tests
  - Changed Stream.toList() to Stream.collect(Collectors.toList())
  - Affects: shipping-service and favourite-service
  - Ensures compatibility with Java 11 in GitHub Actions pipeline